--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:800" rel="stylesheet">
     <title>QUANTA 2018</title>
   </head>
   <body>
   <div class="container">
-    <h1 class="display-1 judul text-center text">Coming soon.</h1>
-    <h1 class="display-1 judul text-center text">Coming soon.</h1>
-    <h1 class="display-1 judul text-center text">Coming soon.</h1>
-    <h1 class="display-1 judul text-center text">Coming soon.</h1>
-    <h1 class="display-1 judul text-center text">Coming soon.</h1>
-    <h1 class="display-1 judul text-center text" style="color:white">Quanta 2018</h1>
+    <a href="https://www.youtube.com/watch?v=_SSKgkMROHU&t=29spbea" target="_blank">
+    <h1 class="display-1 judul centered text" style="color:white" >click gua.</h1>
+    </a>
 
 
   </div>
