--- a/index.html
+++ b/index.html
@@ -1,28 +1,81 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!-- Required meta tags -->
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>QUANTA 2018</title>
-  </head>
-  <body>
-  <div class="container">
-    <a href="https://www.youtube.com/watch?v=_SSKgkMROHU&t=29spbea" target="_blank">
-    <h1 class="display-1 judul centered text" style="color:white" >click gua.</h1>
-    </a>
+<meta charset="utf-8"></meta>
 
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1, shrink-to-fit=no">
+</meta>
 
+<!-- Bootstrap CSS -->
+
+<link
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+  crossorigin="anonymous">
+</link>
+
+<link href="style.css" rel="stylesheet"></link>
+
+<title>QUANTA 2018</title>
+<!-- Isinya -->
+<body>
+<div>
+  <!-- Ini Navbar -->
+  <div class="row">
+    <div class="col-sm-1">
+    </div>
+    <div class="col-sm-4" style="padding-top:20px;">
+        <span class="tekskecil">Home</span>
+        <span class="tekskecil" style="padding-left:5%">BBQ</span>
+        <span class="tekskecil" style="padding-left:5%">Biodata</span>
+        <span class="tekskecil" style="padding-left:5%">Gallery</span>
+          <h1 class="kenangan" style="padding-top:25%;">Sebuah</h1>
+          <h1 class="kenangan">Kenangan</h1>
+          <h1 class="kenangan">Kebersamaan</h1>
+          <a href="#" target="_blank">
+            <img src="Assets/button1.png" style="width: 250px; height: 150px; left:-20px; float:left;" alt="">
+          </a>
+</div>
+  <div class="col-sm-7" style="">
+      <img class="logoatas" src="Assets/toplogo.svg" alt="lol" style="float:right;">
   </div>
+  <!-- Ini tagline homepage -->
+  <div class="row" style="padding-top: 133px; padding-left: 115px;">
+    <div class="col-lg-12">
+      <div class="container title">
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Ini asset samping -->
+<div class="row">
+  <div class="col-sm-1 float-left">
+  <img class="blob2" src="Assets/blob2.svg" alt="">
+  </div>
+</div>
+</div>
+</body>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  </body>
-</html>
+<!-- Optional JavaScript -->
+
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+
+<script
+  src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous">
+</script>
+
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous">
+</script>
+
+<script
+  src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous">
+</script>
