--- a/index.html
+++ b/index.html
@@ -22,39 +22,62 @@
 <!-- Isinya -->
 <body>
 <div>
-  <!-- Ini Navbar -->
-  <div class="row">
-    <div class="col-sm-1">
-    </div>
-    <div class="col-sm-4" style="padding-top:20px;">
-        <span class="tekskecil">Home</span>
-        <span class="tekskecil" style="padding-left:5%">BBQ</span>
-        <span class="tekskecil" style="padding-left:5%">Biodata</span>
-        <span class="tekskecil" style="padding-left:5%">Gallery</span>
-          <h1 class="kenangan" style="padding-top:25%;">Sebuah</h1>
-          <h1 class="kenangan">Kenangan</h1>
-          <h1 class="kenangan">Kebersamaan</h1>
-          <a href="#" target="_blank">
-            <img src="Assets/button1.png" style="width: 250px; height: 150px; left:-20px; float:left;" alt="">
-          </a>
-</div>
-  <div class="col-sm-7" style="">
-      <img class="logoatas" src="Assets/toplogo.svg" alt="lol" style="float:right;">
-  </div>
-  <!-- Ini tagline homepage -->
-  <div class="row" style="padding-top: 133px; padding-left: 115px;">
-    <div class="col-lg-12">
-      <div class="container title">
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Ini asset samping -->
-<div class="row">
-  <div class="col-sm-1 float-left">
-  <img class="blob2" src="Assets/blob2.svg" alt="">
-  </div>
-</div>
+	<!-- Ini Navbar -->
+	<div class="row">
+		<div class="col-sm-1">
+		</div>
+		<div class="col-sm-4" style="padding-top:20px;">
+			<span class="tekskecil">Home</span>
+			<span class="tekskecil" style="padding-left:5%">BBQ</span>
+			<span class="tekskecil" style="padding-left:5%">Biodata</span>
+			<span class="tekskecil" style="padding-left:5%">Gallery</span>
+			<h1 class="kenangan" style="padding-top:25%;">Sebuah</h1>
+			<h1 class="kenangan">Kenangan</h1>
+			<h1 class="kenangan">Kebersamaan</h1>
+			<a href="#" target="_blank">
+				<img src="Assets/button1.png" style="width: 250px; height: 150px; left:-20px; float:left;" alt="">
+			</a>
+		</div>
+		<div class="col-sm-7" style="">
+			<img class="logoatas" src="Assets/toplogo.svg" alt="lol" style="float:right;">
+		</div>
+		<!-- Ini tagline homepage -->
+		<div class="row" style="padding-top: 133px; padding-left: 115px;">
+			<div class="col-lg-12">
+				<div class="container title">
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Ini asset samping -->
+	<div class="row">
+		<div class="col-sm-1 float-left">
+			<img class="blob2" src="Assets/blob2.svg" alt="">
+		</div>
+	</div>
+	<!-- Mulai sambutan -->
+	<div class="row" style="margin-top: -3%;">
+		<div class="col-sm-1">
+		</div>
+		<!-- Ini sambutannya -->
+		<div class="col-sm-4 float-left">
+			<h1 class="sambutan">Sambutan</h1>
+			<h1 class="sambutan">Ketua Angkatan</h1>
+			<p class="isisambutan" style="padding-top: 14%;">Assalamualaikum warahmatullahi wabarakatuh</p>
+			<p class="isisambutan">Salam sejahtera bagi Quanta, angkatan kita tercinta.</p>
+			<p class="isisambutan">Mari kita panjatkan syukur kepada Tuhan Yang Maha Kuasa karena berkat rahmat dan ridho-Nya lah kita dapat masuk universitas terbaik di Indonesia, berjas kuning dengan makara Biru-Merah. Kita berkumpul sebagai satu angkatan Quanta 2018. ..... <a href="#" target="_blank">read more</a></p>
+		</div>
+		<!-- Ini gambarnya -->
+		<div class="col-sm-6" style="">
+			<img src="Assets/quanta2.svg" alt="lol" style="height:303px;width:303px;float:right;">
+			<h1 class="namaketang">Fatih Ismail Alaydrus</h1>
+			<h1 class="ketang">Ketua Angkatan</h1>
+		</div>
+		<!-- Ini asset samping -->
+		<div class="col-sm-12" style="">
+			<img class="blob1" src="Assets/blob1.png" alt="lol" style="float:right;">
+		</div>
+	</div>
 </div>
 </body>
 
