KUY LANJUT MAKNA LOGO
Udah saya ubah jadi dalam persen

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</div>
 	</div>
 		<!-- Ceitanya Sejarah -->
-	<div class="row" style="margin-top: 259px;">
+	<div class="row" style="margin-top: 22%;">
 		<div class="col-sm-1">
 		</div>
 		<!-- Ini Baru Sejarah -->
