--- a/index.html
+++ b/index.html
@@ -88,6 +88,21 @@
 			<p class="isisejarah" style="padding-top: 14%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel felis aliquam, lobortis felis sit amet, cursus erat. Fusce rutrum ultrices lacus, at convallis metus imperdiet fermentum. Phasellus sit amet libero mollis, pretium justo et, euismod orci. Donec ut orci eu diam dictum auctor a in turpis. Cras fringilla enim lacus, vitae elementum diam sagittis ac. Suspendisse scelerisque nibh gravida, porttitor sem quis, aliquam est. Nam ullamcorper, urna sit amet porta molestie, turpis elit congue nulla, a feugiat nisi est sit amet mauris. Sed sed diam viverra neque euismod tempus. Vivamus sagittis erat erat, eu placerat felis dapibus et. Nullam ac tellus in tellus placerat sollicitudin. Donec tincidunt eros nec mauris convallis, eget varius nulla pharetra. Aenean lobortis quis mauris in posuere. Curabitur nec mi orci. Vivamus vel tellus vitae eros blandit posuere a eget dolor.</p>
 		</div>
 	</div>
+	<div class="row" style="margin-top: -3%">
+		<div class="col-sm-1">
+		</div>
+		<!-- ini untuk judul "makna logo" dan isi makna logo -->
+		<div class="col-sm-4 float-left">
+			
+			<!-- judulnya -->
+			<h1 class="judulmakna">Makna Logo</h1>
+			<!-- isinya -->
+			<p class="isimakna">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel felis aliquam, lobortis felis sit amet, cursus erat. Fusce rutrum ultrices lacus, at convallis metus imperdiet fermentum. Phasellus sit amet libero mollis, pretium justo et, euismod orci. Donec ut orci eu diam dictum auctor a in turpis. Cras fringilla enim lacus, vitae elementum diam sagittis ac. Suspendisse scelerisque nibh gravida, porttitor sem quis, aliquam est. Nam ullamcorper, urna sit amet porta molestie, turpis elit congue nulla, a feugiat nisi est sit amet mauris. Sed sed diam viverra neque euismod tempus. Vivamus sagittis erat erat, eu placerat felis dapibus et. Nullam ac tellus in tellus placerat sollicitudin. Donec tincidunt eros nec mauris convallis, eget varius nulla pharetra. Aenean lobortis quis mauris in posuere. Curabitur nec mi orci. Vivamus vel tellus vitae eros blandit posuere a eget dolor.</p>
+		</div>
+		<div class="col-sm-12" style="margin-top: -38.2%">
+			<img class="quanta2" src="Assets/quanta2.svg" alt="lol">
+		</div>
+	</div>
 </div>
 </body>
 
