Ganti Navbar jadi a tag

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 	<div class="row">
 		<div class="col-sm-1">
 		</div>
-		<div class="col-sm-4" style="padding-top:20px;">
-			<span class="tekskecil">Home</span>
-			<span class="tekskecil" style="padding-left:5%">BBQ</span>
-			<span class="tekskecil" style="padding-left:5%">Biodata</span>
-			<span class="tekskecil" style="padding-left:5%">Gallery</span>
+		<div class="col-sm-4" style="padding-top:1%;">
+      <nav class="navbar text-left" style="padding:0%;">
+        <a class="tekskecil navi navbar-brand text-center">Quanta</a>
+        <a class="tekskecil nav-item" style="padding-left:5%">BBQ</a>
+        <a class="tekskecil nav-item" style="padding-left:5%">Biodata</a>
+        <a class="tekskecil nav-item" style="padding-left:5%">Gallery</a>
+      </nav>
 			<h1 class="kenangan" style="padding-top:25%;">Sebuah</h1>
 			<h1 class="kenangan">Kenangan</h1>
 			<h1 class="kenangan">Kebersamaan</h1>
@@ -93,7 +95,7 @@
 		</div>
 		<!-- ini untuk judul "makna logo" dan isi makna logo -->
 		<div class="col-sm-4 float-left">
-			
+
 			<!-- judulnya -->
 			<h1 class="judulmakna">Makna Logo</h1>
 			<!-- isinya -->
