--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<h1 class="kenangan">Kenangan</h1>
 			<h1 class="kenangan">Kebersamaan</h1>
 			<a href="#" target="_blank">
-				<img src="Assets/button1.png" style="width: 250px; height: 150px; left:-20px; float:left;" alt="">
+			     <button type="button" name="button" class="button1">Saksikan</button>
 			</a>
 		</div>
 		<div class="col-sm-7" style="">
