--- a/index.html
+++ b/index.html
@@ -8,20 +8,43 @@
 </meta>
 
 <!-- Bootstrap CSS -->
-
+<head>
+<title>QUANTA 2018</title>
+<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png?">
+<link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png?">
+<link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png?">
+<link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png?">
+<link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png?">
+<link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png?">
+<link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png?">
+<link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png?">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png?">
+<link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png?">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?">
+<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png?">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?">
+<link rel="manifest" href="manifest.json?">
+<meta name="msapplication-TileColor" content="#ffffff?">
+<meta name="msapplication-TileImage" content="ms-icon-144x144.png?">
+<meta name="theme-color" content="#ffffff?">
 <link
   href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
   rel="stylesheet"
   integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
   crossorigin="anonymous">
 </link>
-
 <link href="style.css" rel="stylesheet"></link>
-
-<title>QUANTA 2018</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+</head>
 <!-- Isinya -->
-<body>
-<div>
+<body class="animated fadeIn">
+  <div class="mobile-block animated fadeInUp">
+    <div class="mobile-wrapper text-center">
+      <h1 class="mobile-text text-center"> <span></span></h1>
+      <img src="Assets/mobile.svg" style="width:50%;height:50%;">
+      <h1 class="mobile-text text-center">Scroll if you dare</h1>
+      </div>
+    </div>
 	<!-- Ini Navbar -->
 	<div class="row">
 		<div class="col-sm-1">
