coba benerin dikit di tombol 'top' dan foto mereka yang 4 org itu kurang jarak

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 		<div class="col-sm-4 float-left">
 			<h1 class="sejarah">Sejarah</h1>
 			<p class="isisejarah" style="padding-top: 14%;">“Selamat, Anda diterima sebagai calon mahasiswa baru Universitas Indonesia”. Kalimat ini menandakan awal dari perjuangan kita di kampus perjuangan, Universitas Indonesia. Rasa haru, bangga, dan bahagia tentunya menjadi perasaan yang mendominasi pikiran kita saat melihat kalimat itu. Terlebih lagi, kita, tergabung dalam sebuah fakultas yang merupakan pencetus lahirnya ilmu komputer di Indonesia. Kakak-kakak adkesma CSUI mempersatukan kita untuk pertama kalinya dalam sebuah grup Line. Setelah memastikan semua awak kapal telah bergabung dalam bahtera CSUI 2018, kitapun bersiap menuju pertemuan perdana kita secara langsung. Tatap muka. Bukan melalui layar.</p>
-			<p class="isisejarah" style="margin-top: -35%;">INTEGER 2018. Di sanalah kita bertemu secara langsung. Bertempat di Pondok Laras, kita menyantap makan siang bersama sekaligus bermain bersama untuk pertama kalinya. Tawa, canda, dan cerita pertama berkumpul di momen itu. Momen pertama dan sekaligus yang akan selalu .... <a href="#" target="_blank">read more</a></p>
+			<p class="isisejarah" style="margin-top: -44%;">INTEGER 2018. Di sanalah kita bertemu secara langsung. Bertempat di Pondok Laras, kita menyantap makan siang bersama sekaligus bermain bersama untuk pertama kalinya. Tawa, canda, dan cerita pertama berkumpul di momen itu. Momen pertama dan sekaligus yang akan selalu .... <a href="#" target="_blank">read more</a></p>
 		</div>
 	</div>
-	<div class="row" style="margin-top: -3%">
+	<div class="row" style="margin-top: -20%">
 		<div class="col-sm-1">
 		</div>
 		<!-- ini untuk judul "makna logo" dan isi makna logo -->
@@ -100,10 +100,73 @@
 			<!-- judulnya -->
 			<h1 class="judulmakna">Makna Logo</h1>
 			<!-- isinya -->
-			<p class="isimakna">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum vel felis aliquam, lobortis felis sit amet, cursus erat. Fusce rutrum ultrices lacus, at convallis metus imperdiet fermentum. Phasellus sit amet libero mollis, pretium justo et, euismod orci. Donec ut orci eu diam dictum auctor a in turpis. Cras fringilla enim lacus, vitae elementum diam sagittis ac. Suspendisse scelerisque nibh gravida, porttitor sem quis, aliquam est. Nam ullamcorper, urna sit amet porta molestie, turpis elit congue nulla, a feugiat nisi est sit amet mauris. Sed sed diam viverra neque euismod tempus. Vivamus sagittis erat erat, eu placerat felis dapibus et. Nullam ac tellus in tellus placerat sollicitudin. Donec tincidunt eros nec mauris convallis, eget varius nulla pharetra. Aenean lobortis quis mauris in posuere. Curabitur nec mi orci. Vivamus vel tellus vitae eros blandit posuere a eget dolor.</p>
+			<ul class="isimakna">
+				<li>Merah biru merupakan warna Fasilkom</li>
+				<li>Q yang terbentuk dari orbit atom merupakan inisial nama angkatan Quanta.</li>
+				<li>Quanta, bagaikan sebuah atom, ialah sebuah singularitas yang solid dan tidak bisa dibagi lagi.</li>
+				<li>Atom juga melambangkan titik awal dari sesuatu yang besar dan signifikan.</li>
+				<li>Tanda panah yang membentuk Q dan menghadap condong ke atas melambangkan pertumbuhan dan perkembangan teknologi yang tidak ada batas.</li>
+				<li>Elektron menandakan Industry 4.0</li>
+			</ul>
 		</div>
 		<div class="col-sm-12" style="margin-top: -38.2%">
 			<img class="quanta2" src="Assets/quanta2.svg" alt="lol">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-1"></div>
+		<div class="col-sm-11" style="text-align: center; display: inline-block !important;">
+			<h1 class="judulmereka" style="margin-top: 0%">Kata mereka</h1>
+		</div>	
+	</div>
+	<div class="row" style="margin-top: 5%;">
+		<div class="col-sm-2" style="margin-left: 6.5%;">
+			<ul class="list">
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li class="katamereka">Mantul</li>
+				<li class="namamereka">Zuhrah</li>
+				<li class="jabatanmereka">Koordinator SI 2018</li>
+			</ul>
+		</div>
+		<div class="col-sm-2">
+			<ul class="list">
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li class="katamereka">Nyesel</li>
+				<li class="namamereka">Anggardha</li>
+				<li class="jabatanmereka">Koordinator Ilkom 2018</li>
+			</ul>
+		</div>
+		<div class="col-sm-2">
+			<ul class="list">
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li class="katamereka">Sarangheyo</li>
+				<li class="namamereka">Luthfi</li>
+				<li class="jabatanmereka">Ketua PMB 2018</li>
+			</ul>
+		</div>
+		<div class="col-sm-2">
+			<ul class="list">
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li class="katamereka">Quanta!</li>
+				<li class="namamereka">L. Adhito</li>
+				<li class="jabatanmereka">PJ Komdis PMB 2018</li>
+			</ul>
+		</div>
+	</div>
+	<div class="col-sm-3" style="padding-left: 85%;">
+		<button onclick="topFunction()" class="buttontop" title="Go to top">Top</button>
+	</div>
+	<div class="banner">
+		<img src="Assets/bottombar.svg" class="bottombar">
+		<div class="col-sm-3"></div>
+		<div class="col-sm-6">
+			<h1 class="teamwork">Teamwork. Excellence. We are Quanta.</h1>
+			<h2 class="whomade">Who made this cool website?</h2>
+		</div>
+		<div style="width: 100%;padding-left: 44%;padding-top: 2%">
+			<a href="#" target="_blank">
+				<button type="button" name="button" class="buttonteam">The team</button>
+			</a>
 		</div>
 	</div>
 </div>
@@ -112,7 +175,12 @@
 <!-- Optional JavaScript -->
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-
+<script>
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
+</script>
 <script
   src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
