coba dicek lagi ya

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 		<div class="col-sm-4 float-left">
 			<h1 class="sejarah">Sejarah</h1>
 			<p class="isisejarah" style="padding-top: 14%;">“Selamat, Anda diterima sebagai calon mahasiswa baru Universitas Indonesia”. Kalimat ini menandakan awal dari perjuangan kita di kampus perjuangan, Universitas Indonesia. Rasa haru, bangga, dan bahagia tentunya menjadi perasaan yang mendominasi pikiran kita saat melihat kalimat itu. Terlebih lagi, kita, tergabung dalam sebuah fakultas yang merupakan pencetus lahirnya ilmu komputer di Indonesia. Kakak-kakak adkesma CSUI mempersatukan kita untuk pertama kalinya dalam sebuah grup Line. Setelah memastikan semua awak kapal telah bergabung dalam bahtera CSUI 2018, kitapun bersiap menuju pertemuan perdana kita secara langsung. Tatap muka. Bukan melalui layar.</p>
-			<p class="isisejarah" style="margin-top: -44%;">INTEGER 2018. Di sanalah kita bertemu secara langsung. Bertempat di Pondok Laras, kita menyantap makan siang bersama sekaligus bermain bersama untuk pertama kalinya. Tawa, canda, dan cerita pertama berkumpul di momen itu. Momen pertama dan sekaligus yang akan selalu .... <a href="#" target="_blank">read more</a></p>
+			<p class="isisejarah">INTEGER 2018. Di sanalah kita bertemu secara langsung. Bertempat di Pondok Laras, kita menyantap makan siang bersama sekaligus bermain bersama untuk pertama kalinya. Tawa, canda, dan cerita pertama berkumpul di momen itu. Momen pertama dan sekaligus yang akan selalu .... <a href="#" target="_blank">read more</a></p>
 		</div>
 	</div>
-	<div class="row" style="margin-top: -20%">
+	<div class="row" style="margin-top: 10%">
 		<div class="col-sm-1">
 		</div>
 		<!-- ini untuk judul "makna logo" dan isi makna logo -->
@@ -151,7 +151,7 @@
 				<li class="jabatanmereka">Koordinator SI 2018</li>
 			</ul>
 		</div>
-		<div class="col-sm-2">
+		<div class="col-sm-2" style="margin-left: 6.5%;">
 			<ul class="list">
 				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
 				<li class="katamereka">Nyesel</li>
@@ -159,7 +159,7 @@
 				<li class="jabatanmereka">Koordinator Ilkom 2018</li>
 			</ul>
 		</div>
-		<div class="col-sm-2">
+		<div class="col-sm-2" style="margin-left: 6.5%;">
 			<ul class="list">
 				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
 				<li class="katamereka">Sarangheyo</li>
@@ -167,7 +167,7 @@
 				<li class="jabatanmereka">Ketua PMB 2018</li>
 			</ul>
 		</div>
-		<div class="col-sm-2">
+		<div class="col-sm-2" style="margin-left: 6.5%;">
 			<ul class="list">
 				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
 				<li class="katamereka">Quanta!</li>
@@ -179,9 +179,8 @@
 	<div class="col-sm-3" style="padding-left: 85%;">
 		<button onclick="topFunction()" class="buttontop" title="Go to top">Top</button>
 	</div>
-	<div class="banner">
+	<div class="banner" style="margin-top: -6%;">
 		<img src="Assets/bottombar.svg" class="bottombar">
-		<div class="col-sm-3"></div>
 		<div class="col-sm-6">
 			<h1 class="teamwork">Teamwork. Excellence. We are Quanta.</h1>
 			<h2 class="whomade">Who made this cool website?</h2>
