Coba cek lagi ya..

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 				<li class="jabatanmereka">Koordinator SI 2018</li>
 			</ul>
 		</div>
-		<div class="col-sm-2" style="margin-left: 6.5%;">
+		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
 				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
 				<li class="katamereka">Nyesel</li>
@@ -159,7 +159,7 @@
 				<li class="jabatanmereka">Koordinator Ilkom 2018</li>
 			</ul>
 		</div>
-		<div class="col-sm-2" style="margin-left: 6.5%;">
+		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
 				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
 				<li class="katamereka">Sarangheyo</li>
@@ -167,7 +167,7 @@
 				<li class="jabatanmereka">Ketua PMB 2018</li>
 			</ul>
 		</div>
-		<div class="col-sm-2" style="margin-left: 6.5%;">
+		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
 				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
 				<li class="katamereka">Quanta!</li>
@@ -176,7 +176,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class="col-sm-3" style="padding-left: 85%;">
+	<div class="col-sm-3" style="padding-left: 85%;margin-top: -3%;">
 		<button onclick="topFunction()" class="buttontop" title="Go to top">Top</button>
 	</div>
 	<div class="banner" style="margin-top: -6%;">
@@ -185,7 +185,7 @@
 			<h1 class="teamwork">Teamwork. Excellence. We are Quanta.</h1>
 			<h2 class="whomade">Who made this cool website?</h2>
 		</div>
-		<div style="width: 100%;padding-left: 44%;padding-top: 2%">
+		<div style="width: 100%;padding-left: 44%;padding-top: 4%;">
 			<a href="#" target="_blank">
 				<button type="button" name="button" class="buttonteam">The team</button>
 			</a>
