Coba dicek lagi ya..

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 		</div>
 		<!-- Ini gambarnya -->
 		<div class="col-sm-6" style="">
-			<img src="Assets/quanta2.svg" alt="lol" style="height:303px;width:303px;float:right;">
-			<h1 class="namaketang">Fatih Ismail Alaydrus</h1>
+			<img src="Assets/fatih.png" alt="lol" style="height:52%;width:52%;float:right;">
+			<h1 class="namaketang" style="padding-top: 1%;">Fatih Ismail Alaydrus</h1>
 			<h1 class="ketang">Ketua Angkatan</h1>
 		</div>
 		<!-- Ini asset samping -->
