--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	<div class="row" style="margin-top: 5%;">
 		<div class="col-sm-2" style="margin-left: 6.5%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
 				<li class="katamereka">Mantul</li>
 				<li class="namamereka">Zuhrah</li>
 				<li class="jabatanmereka">Koordinator SI 2018</li>
@@ -153,7 +153,7 @@
 		</div>
 		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
 				<li class="katamereka">Nyesel</li>
 				<li class="namamereka">Anggardha</li>
 				<li class="jabatanmereka">Koordinator Ilkom 2018</li>
@@ -161,7 +161,7 @@
 		</div>
 		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
 				<li class="katamereka">Sarangheyo</li>
 				<li class="namamereka">Luthfi</li>
 				<li class="jabatanmereka">Ketua PMB 2018</li>
@@ -169,7 +169,7 @@
 		</div>
 		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka"></li>
+				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
 				<li class="katamereka">Quanta!</li>
 				<li class="namamereka">L. Adhito</li>
 				<li class="jabatanmereka">PJ Komdis PMB 2018</li>
