--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		</div>
 		<!-- Ini gambarnya -->
 		<div class="col-sm-6" style="">
-			<img src="Assets/fatih.png" alt="lol" style="height:52%;width:52%;float:right;">
+			<img src="Assets/fatih.png" alt="lol" style="width:52%;float:right;">
 			<h1 class="namaketang" style="padding-top: 1%;">Fatih Ismail Alaydrus</h1>
 			<h1 class="ketang">Ketua Angkatan</h1>
 		</div>
