--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<h1 class="sambutan">Ketua Angkatan</h1>
 			<p class="isisambutan" style="padding-top: 14%;">Assalamualaikum warahmatullahi wabarakatuh</p>
 			<p class="isisambutan">Salam sejahtera bagi Quanta, angkatan kita tercinta.</p>
-			<p class="isisambutan">Mari kita panjatkan syukur kepada Tuhan Yang Maha Kuasa karena berkat rahmat dan ridho-Nya lah kita dapat masuk universitas terbaik di Indonesia, berjas kuning dengan makara Biru-Merah. Kita berkumpul sebagai satu angkatan Quanta 2018. ..... <a href="#" target="_blank">read more</a></p>
+			<p class="isisambutan">Mari kita panjatkan syukur kepada Tuhan Yang Maha Kuasa karena berkat rahmat dan ridho-Nya lah kita dapat masuk universitas terbaik di Indonesia, berjas kuning dengan makara Biru-Merah. Kita berkumpul sebagai satu angkatan Quanta 2018. ..... <a href="quanta2018.com/ketang" target="_blank">read more</a></p>
 		</div>
 		<!-- Ini gambarnya -->
 		<div class="col-sm-6" style="">
