--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 		</div>
 		<div class="col-sm-4" style="padding-top:1%;">
       <nav class="navbar text-left" style="padding:0%;">
-        <a class="tekskecil navi navbar-brand text-center" href="#" target="_blank">Quanta</a>
-        <a class="tekskecil nav-item" style="padding-left:5%" href="https://docs.google.com/forms/d/e/1FAIpQLSeskTMdtX8cJpaF8ciZJjKrARTCvrVnZ2DGsmN_zCa4f0pcbQ/viewform?usp=pp_url" target="_blank">BBQ</a>
-        <a class="tekskecil nav-item" style="padding-left:5%" href="Biodata" target="_blank">Biodata</a>
-        <a class="tekskecil nav-item" style="padding-left:5%" href="Gallery" target="_blank">Gallery</a>
+        <a class="tekskecil navi navbar-brand text-center" href="#" target="_blank"><font color="black">Quanta</font></a>
+        <a class="tekskecil nav-item" style="padding-left:5%" href="https://docs.google.com/forms/d/e/1FAIpQLSeskTMdtX8cJpaF8ciZJjKrARTCvrVnZ2DGsmN_zCa4f0pcbQ/viewform?usp=pp_url" target="_blank"><font color="black">BBQ</font></a>
+        <a class="tekskecil nav-item" style="padding-left:5%" href="Biodata" target="_blank"><font color="black">Biodata</font></a>
+        <a class="tekskecil nav-item" style="padding-left:5%" href="Gallery" target="_blank"><font color="black">Gallery</font></a>
       </nav>
 			<h1 class="kenangan" style="padding-top:25%;">Sebuah</h1>
 			<h1 class="kenangan">Kenangan</h1>
