--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		<div class="col-sm-4 float-left">
 			<h1 class="sejarah">Sejarah</h1>
 			<p class="isisejarah" style="padding-top: 14%;">“Selamat, Anda diterima sebagai calon mahasiswa baru Universitas Indonesia”. Kalimat ini menandakan awal dari perjuangan kita di kampus perjuangan, Universitas Indonesia. Rasa haru, bangga, dan bahagia tentunya menjadi perasaan yang mendominasi pikiran kita saat melihat kalimat itu. Terlebih lagi, kita, tergabung dalam sebuah fakultas yang merupakan pencetus lahirnya ilmu komputer di Indonesia. Kakak-kakak adkesma CSUI mempersatukan kita untuk pertama kalinya dalam sebuah grup Line. Setelah memastikan semua awak kapal telah bergabung dalam bahtera CSUI 2018, kitapun bersiap menuju pertemuan perdana kita secara langsung. Tatap muka. Bukan melalui layar.</p>
-			<p class="isisejarah">INTEGER 2018. Di sanalah kita bertemu secara langsung. Bertempat di Pondok Laras, kita menyantap makan siang bersama sekaligus bermain bersama untuk pertama kalinya. Tawa, canda, dan cerita pertama berkumpul di momen itu. Momen pertama dan sekaligus yang akan selalu .... <a href="history" target="_blank">read more</a></p>
+			<p class="isisejarah">INTEGER 2018. Di sanalah kita bertemu secara langsung. Bertempat di Pondok Laras, kita menyantap makan siang bersama sekaligus bermain bersama untuk pertama kalinya. Tawa, canda, dan cerita pertama berkumpul di momen itu. Momen pertama dan sekaligus yang akan selalu .... <a href="history" target="_self">read more</a></p>
 		</div>
 	</div>
 	<div class="row" style="margin-top: 10%">
