kata mereka udahan

--- a/index.html
+++ b/index.html
@@ -145,34 +145,34 @@
 	<div class="row" style="margin-top: 5%;">
 		<div class="col-sm-2" style="margin-left: 6.5%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
-				<li class="katamereka">Mantul</li>
+				<li><img src="Assets/Zuhrah.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
+				<li class="katamereka">Bagian dari Hidup</li>
 				<li class="namamereka">Zuhrah</li>
 				<li class="jabatanmereka">Koordinator SI 2018</li>
 			</ul>
 		</div>
 		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
-				<li class="katamereka">Nyesel</li>
+				<li><img src="Assets/Anggardha.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
+				<li class="katamereka">Sukses terus Quanta!</li>
 				<li class="namamereka">Anggardha</li>
 				<li class="jabatanmereka">Koordinator Ilkom 2018</li>
 			</ul>
 		</div>
 		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
-				<li class="katamereka">Sarangheyo</li>
+				<li><img src="Assets/KaLuthfi.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(221, 62, 62, 0.35);"></li>
+				<li class="katamereka">Sukses!</li>
 				<li class="namamereka">Luthfi</li>
 				<li class="jabatanmereka">Ketua PMB 2018</li>
 			</ul>
 		</div>
 		<div class="col-sm-2" style="margin-left: 3%;">
 			<ul class="list">
-				<li><img src="Assets/kucinggemuk.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
-				<li class="katamereka">Quanta!</li>
-				<li class="namamereka">L. Adhito</li>
-				<li class="jabatanmereka">PJ Komdis PMB 2018</li>
+				<li><img src="Assets/KaIzzan.png" class="gambarmereka" style="box-shadow: 0 32px 64px 0 rgba(65, 182, 217, 0.28);"></li>
+				<li class="katamereka">Harapan</li>
+				<li class="namamereka">Izzan</li>
+				<li class="jabatanmereka">PJ Mentor PMB 2018</li>
 			</ul>
 		</div>
 	</div>
