benerin The Team

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 		</div>
 		<div style="width: 100%;padding-left: 44%;padding-top: 4%;">
 			<a href="Team" target="_self">
-				<button type="button" name="button" class="buttonteam">The team</button>
+				<button type="button" name="button" class="buttonteam">The Team</button>
 			</a>
 		</div>
 	</div>
