--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <div class="mobile-wrapper text-center">
       <h1 class="mobile-text text-center"> <span></span></h1>
       <img src="Assets/mobile.svg" style="width:50%;height:50%;">
-      <h1 class="mobile-text text-center">Scroll if you dare</h1>
+      <h1 class="mobile-text text-center">The page below is still ugly. </h1>
+      <h1 class="mobile-text text-center"><b>You have been warned.</b></h1>
       </div>
     </div>
 	<!-- Ini Navbar -->
@@ -140,7 +141,7 @@
 		<div class="col-sm-1"></div>
 		<div class="col-sm-11" style="text-align: center; display: inline-block !important;">
 			<h1 class="judulmereka" style="margin-top: 0%">Kata mereka</h1>
-		</div>	
+		</div>
 	</div>
 	<div class="row" style="margin-top: 5%;">
 		<div class="col-sm-2" style="margin-left: 6.5%;">
