--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
 <!-- Isinya -->
-<body class="animated fadeIn" style="overflow: hidden; min-height:20%; padding-bottom:1px;" >
+<body class="animated fadeIn">
   <div class="mobile-block animated fadeInUp">
     <div class="mobile-wrapper text-center">
       <h1 class="mobile-text text-center"> <span></span></h1>
