--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
     <div class="mobile-wrapper text-center">
       <h1 class="mobile-text text-center"> <span></span></h1>
       <img src="Assets/mobile.svg" style="width:50%;height:50%;">
-      <h1 class="mobile-text text-center">The page below is still ugly. </h1>
-      <h1 class="mobile-text text-center"><b>You have been warned.</b></h1>
+      <h1 class="mobile-text text-center" style="font-size:80%;"><b>Scroll at your own risk.</b></h1>
       </div>
     </div>
 	<!-- Ini Navbar -->
